OnboardingV2Minimal/force-app/main/default/objects/Contact.object
<CustomObject>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>