OnboardingV2Minimal/force-app/main/default/objects/Contact/fields/Accessory_Territory__c.field-meta.xml
<CustomField>
    <fullName>Accessory_Territory__c</fullName>
    <formula>TEXT(Account.Accessory_Territory__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Accessory Territory</label>
    <type>Text</type>
</CustomField>