OnboardingV2Minimal/force-app/main/default/objects/Contact/fields/Account_Division__c.field-meta.xml
<CustomField>
    <fullName>Account_Division__c</fullName>
    <formula>text(Account.Division__c)</formula>
    <label>Program Division</label>
    <type>Text</type>
</CustomField>