OnboardingV2Minimal/force-app/main/default/objects/Contact/fields/Account_Region__c.field-meta.xml
<CustomField>
    <fullName>Account_Region__c</fullName>
    <formula>text(Account.Region__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Program Region</label>
    <type>Text</type>
</CustomField>