OnboardingV2Minimal/force-app/main/default/objects/Contact/fields/Account_Territory__c.field-meta.xml
<CustomField>
    <fullName>Account_Territory__c</fullName>
    <formula>TEXT( Account.Territory__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Program Territory</label>
    <type>Text</type>
</CustomField>