OnboardingV2Minimal/force-app/main/default/objects/Contact/fields/Add_to_Agreements__c.field-meta.xml
<CustomField>
    <fullName>Add_to_Agreements__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Authorized Signer</label>
    <type>Checkbox</type>
</CustomField>