OnboardingV2Minimal/force-app/main/default/objects/Contact/fields/AT_T_Employee_Name__c.field-meta.xml
<CustomField>
    <fullName>AT_T_Employee_Name__c</fullName>
    <label>ATT Employee Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>