OnboardingV2Minimal/force-app/main/default/objects/Contact/fields/Business_Card__c.field-meta.xml
<CustomField>
    <fullName>Business_Card__c</fullName>
    <label>Business Card</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>