OnboardingV2Minimal/force-app/main/default/objects/Contact/fields/BusinessRelationID__c.field-meta.xml
<CustomField>
    <fullName>BusinessRelationID__c</fullName>
    <label>BusinessRelationID</label>
    <length>25</length>
    <type>Text</type>
</CustomField>