OnboardingV2Minimal/force-app/main/default/objects/Contact/fields/Chuzo_Member__c.field-meta.xml
<CustomField>
    <fullName>Chuzo_Member__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field indicates if this user is member of Chuzo community, and it’s maintained by POE_UpdateUserCommunityMembership [PER-3218].</description>
    <label>Chuzo Member</label>
    <type>Checkbox</type>
</CustomField>