OnboardingV2Minimal/force-app/main/default/objects/Contact/fields/Clean_Phone__c.field-meta.xml
<CustomField>
    <fullName>Clean_Phone__c</fullName>
    <formula>IF(
  ISBLANK(Phone),
  &quot;&quot;,
  IF(
    LEFT(Phone, 1) = &quot;+&quot;,
    SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(Phone, &quot; &quot;, &quot;&quot;), &quot;-&quot;, &quot;&quot;), &quot;(&quot;, &quot;&quot;), &quot;)&quot;, &quot;&quot;), &quot;.&quot;, &quot;&quot;),
    &quot;+1&quot; &amp; SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(Phone, &quot; &quot;, &quot;&quot;), &quot;-&quot;, &quot;&quot;), &quot;(&quot;, &quot;&quot;), &quot;)&quot;, &quot;&quot;), &quot;.&quot;, &quot;&quot;)
  )
)</formula>
    <label>Clean Phone</label>
    <type>Text</type>
</CustomField>