OnboardingV2Minimal/force-app/main/default/objects/Contact/fields/Company_Name_if_not_an_acct__c.field-meta.xml
<CustomField>
    <fullName>Company_Name_if_not_an_acct__c</fullName>
    <description>Use this field if the contact does not have an account with P10.</description>
    <inlineHelpText>Use this field if the contact does not have an account with P10.</inlineHelpText>
    <label>Company Name (if not an acct)</label>
    <length>40</length>
    <type>Text</type>
</CustomField>