OnboardingV2Minimal/force-app/main/default/objects/Contact/fields/Contact_Biography__c.field-meta.xml
<CustomField>
    <fullName>Contact_Biography__c</fullName>
    <label>Contact Biography</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>