OnboardingV2Minimal/force-app/main/default/objects/Contact/fields/ContactPersonID__c.field-meta.xml
<CustomField>
    <fullName>ContactPersonID__c</fullName>
    <label>ContactPersonID</label>
    <length>25</length>
    <type>Text</type>
</CustomField>