OnboardingV2Minimal/force-app/main/default/objects/Contact/fields/Contract_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_Expiration_Date__c</fullName>
    <description>Tracks the expiration date of the existing contract with the current provider.</description>
    <label>Contract Expiration Date</label>
    <type>Date</type>
</CustomField>