OnboardingV2Minimal/force-app/main/default/objects/Contact/fields/Current_Provider_s__c.field-meta.xml
<CustomField>
    <fullName>Current_Provider_s__c</fullName>
    <description>Specifies the current service providers or vendors the person account is working with.</description>
    <label>Current Provider(s)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>