OnboardingV2Minimal/force-app/main/default/objects/Contact/fields/Current_Provider_s_Cost__c.field-meta.xml
<CustomField>
    <fullName>Current_Provider_s_Cost__c</fullName>
    <description>Records the cost associated with the current service provider(s).</description>
    <label>Current Provider(s) Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>