OnboardingV2Minimal/force-app/main/default/objects/Contact/fields/ECC_CIM_Workers__c.field-meta.xml
<CustomField>
    <fullName>ECC_CIM_Workers__c</fullName>
    <label>ECC CIM Workers #</label>
    <length>255</length>
    <type>Text</type>
</CustomField>