OnboardingV2Minimal/force-app/main/default/objects/Contact/fields/ECC_PIN__c.field-meta.xml
<CustomField>
    <fullName>ECC_PIN__c</fullName>
    <label>ECC PIN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>