OnboardingV2Minimal/force-app/main/default/objects/Contact/fields/ECC_Username__c.field-meta.xml
<CustomField>
    <fullName>ECC_Username__c</fullName>
    <label>ECC Username</label>
    <length>255</length>
    <type>Text</type>
</CustomField>