OnboardingV2Minimal/force-app/main/default/objects/Contact/fields/Employee_that_referred_you__c.field-meta.xml
<CustomField>
    <fullName>Employee_that_referred_you__c</fullName>
    <label>Employee that referred you</label>
    <length>100</length>
    <type>Text</type>
</CustomField>