OnboardingV2Minimal/force-app/main/default/objects/Contact/fields/Engagement_Program_Tags__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Program_Tags__c</fullName>
    <label>Engagement Program Tags</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>