OnboardingV2Minimal/force-app/main/default/objects/Contact/fields/External_Contact_ID__c.field-meta.xml
<CustomField>
    <fullName>External_Contact_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>External Contact ID</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>