OnboardingV2Minimal/force-app/main/default/objects/Contact/fields/First_Date_Contacted__c.field-meta.xml
<CustomField>
    <fullName>First_Date_Contacted__c</fullName>
    <description>Captures the date when the person account was first contacted regarding an opportunity or service.</description>
    <label>First Date Contacted</label>
    <type>Date</type>
</CustomField>