OnboardingV2Minimal/force-app/main/default/objects/Contact/fields/FSL_Member__c.field-meta.xml
<CustomField>
    <fullName>FSL_Member__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field indicates if this user is member of FSL community, and it’s maintained by POE_UpdateUserCommunityMembership [PER-3218].</description>
    <label>FSL Member</label>
    <type>Checkbox</type>
</CustomField>