OnboardingV2Minimal/force-app/main/default/objects/Contact/fields/ID_Viasat__c.field-meta.xml
<CustomField>
    <fullName>ID_Viasat__c</fullName>
    <label>ID-Viasat</label>
    <length>80</length>
    <type>Text</type>
</CustomField>