OnboardingV2Minimal/force-app/main/default/objects/Contact/fields/Infrastructure_Contact_Segment__c.field-meta.xml
<CustomField>
    <fullName>Infrastructure_Contact_Segment__c</fullName>
    <label>Infrastructure Contact Segment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Account Payables</fullName>
            </value>
            <value>
                <fullName>Civil</fullName>
            </value>
            <value>
                <fullName>DAS</fullName>
            </value>
            <value>
                <fullName>Engineer (SA, MA, CAD, PE)</fullName>
            </value>
            <value>
                <fullName>Macro</fullName>
            </value>
            <value>
                <fullName>Maintenance and Operations</fullName>
            </value>
            <value>
                <fullName>Public Safety</fullName>
            </value>
            <value>
                <fullName>Safety</fullName>
            </value>
            <value>
                <fullName>Scoping</fullName>
            </value>
            <value>
                <fullName>Site Acquisition</fullName>
            </value>
            <value>
                <fullName>Small Cells</fullName>
            </value>
            <value>
                <fullName>Structure cabling</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>