OnboardingV2Minimal/force-app/main/default/objects/Contact/fields/Last_Appointment_Notification_Id__c.field-meta.xml
<CustomField>
    <fullName>Last_Appointment_Notification_Id__c</fullName>
    <description>This field contains the Id of the last service appointment that received a notification. (PVFSL-214)</description>
    <inlineHelpText>This field contains the Id of the last service appointment that received a notification.</inlineHelpText>
    <label>Last Appointment Notification Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>