OnboardingV2Minimal/force-app/main/default/objects/Contact/fields/Lead_Origin_Other__c.field-meta.xml
<CustomField>
    <fullName>Lead_Origin_Other__c</fullName>
    <label>Lead Origin Other</label>
    <length>255</length>
    <type>Text</type>
</CustomField>