OnboardingV2Minimal/force-app/main/default/objects/Contact/fields/Lead_Type__c.field-meta.xml
<CustomField>
    <fullName>Lead_Type__c</fullName>
    <label>Lead Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>SWAP</fullName>
            </value>
            <value>
                <fullName>NATE</fullName>
            </value>
            <value>
                <fullName>WIA</fullName>
            </value>
            <value>
                <fullName>CTIA</fullName>
            </value>
            <value>
                <fullName>Tradeshow</fullName>
            </value>
            <value>
                <fullName>Social Media</fullName>
            </value>
            <value>
                <fullName>Network</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>