OnboardingV2Minimal/force-app/main/default/objects/Contact/fields/LearnUponP__Create_in_LearnUpon__c.field-meta.xml
<CustomField>
    <fullName>LearnUponP__Create_in_LearnUpon__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Create in LearnUpon</label>
    <type>Checkbox</type>
</CustomField>