OnboardingV2Minimal/force-app/main/default/objects/Contact/fields/LearnUponP__LU_Field_1__c.field-meta.xml
<CustomField>
    <fullName>LearnUponP__LU_Field_1__c</fullName>
    <label>LU Field 1</label>
    <type>DateTime</type>
</CustomField>