OnboardingV2Minimal/force-app/main/default/objects/Contact/fields/LearnUponP__LU_Field_2__c.field-meta.xml
<CustomField>
    <fullName>LearnUponP__LU_Field_2__c</fullName>
    <label>LU Field 2</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>