OnboardingV2Minimal/force-app/main/default/objects/Contact/fields/LearnUponP__LU_Field_3__c.field-meta.xml
<CustomField>
    <fullName>LearnUponP__LU_Field_3__c</fullName>
    <label>LU Field 3</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>