OnboardingV2Minimal/force-app/main/default/objects/Contact/fields/LearnUponP__LU_Last_Accessed_At__c.field-meta.xml
<CustomField>
    <fullName>LearnUponP__LU_Last_Accessed_At__c</fullName>
    <label>LU Last Accessed At</label>
    <type>DateTime</type>
</CustomField>