OnboardingV2Minimal/force-app/main/default/objects/Contact/fields/LearnUponP__LU_Number_Passed__c.field-meta.xml
<CustomField>
    <fullName>LearnUponP__LU_Number_Passed__c</fullName>
    <label>LU Number Passed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>