OnboardingV2Minimal/force-app/main/default/objects/Contact/fields/LearnUponP__LU_User_ID__c.field-meta.xml
<CustomField>
    <fullName>LearnUponP__LU_User_ID__c</fullName>
    <externalId>true</externalId>
    <label>LU User ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>