OnboardingV2Minimal/force-app/main/default/objects/Contact/fields/Market_Name__c.field-meta.xml
<CustomField>
    <fullName>Market_Name__c</fullName>
    <label>Market Name</label>
    <length>25</length>
    <type>Text</type>
</CustomField>