OnboardingV2Minimal/force-app/main/default/objects/Contact/fields/MDU_Programs_Available__c.field-meta.xml
<CustomField>
    <fullName>MDU_Programs_Available__c</fullName>
    <label>MDU Programs Available</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Altice</fullName>
                <label>Optimum</label>
            </value>
            <value>
                <fullName>Frontier</fullName>
            </value>
            <value>
                <fullName>Windstream</fullName>
            </value>
            <value>
                <fullName>EarthLink</fullName>
            </value>
            <value>
                <fullName>Brightspeed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>