OnboardingV2Minimal/force-app/main/default/objects/Contact/fields/Most_Recent_Pardot_Tag__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_Pardot_Tag__c</fullName>
    <label>Most Recent Pardot Tag</label>
    <type>TextArea</type>
</CustomField>