OnboardingV2Minimal/force-app/main/default/objects/Contact/fields/My_Dealer_Flag__c.field-meta.xml
<CustomField>
    <fullName>My_Dealer_Flag__c</fullName>
    <formula>IF(OR(Account.Name ==  $User.POE_PartnerAccount__c, $User.POE_Profile_Name__c == &apos;System Administrator&apos;, $User.POE_Profile_Name__c == &apos;PV_Manager&apos;), true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>My Dealer Flag</label>
    <type>Checkbox</type>
</CustomField>