OnboardingV2Minimal/force-app/main/default/objects/Contact/fields/Other_Lead_Type__c.field-meta.xml
<CustomField>
    <fullName>Other_Lead_Type__c</fullName>
    <label>Other Lead Type</label>
    <length>30</length>
    <type>Text</type>
</CustomField>