OnboardingV2Minimal/force-app/main/default/objects/Contact/fields/Owner__c.field-meta.xml
<CustomField>
    <fullName>Owner__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is the owner field for all contacts that are at least part owners of the account.</description>
    <inlineHelpText>Only check this box if this contact is an owner, but not the principal owner.</inlineHelpText>
    <label>Owner</label>
    <type>Checkbox</type>
</CustomField>