OnboardingV2Minimal/force-app/main/default/objects/Contact/fields/P10_Invoice_Account__c.field-meta.xml
<CustomField>
    <fullName>P10_Invoice_Account__c</fullName>
    <formula>Account.P10_Invoice_Account__c</formula>
    <label>Account #</label>
    <type>Text</type>
</CustomField>