OnboardingV2Minimal/force-app/main/default/objects/Contact/fields/Pardot_Installation_Date__c.field-meta.xml
<CustomField>
    <fullName>Pardot_Installation_Date__c</fullName>
    <description>This field is used by Pardot to send communication emails [PER-3195]</description>
    <label>Pardot Installation Date</label>
    <type>Date</type>
</CustomField>