OnboardingV2Minimal/force-app/main/default/objects/Contact/fields/Pardot_Package_Option__c.field-meta.xml
<CustomField>
    <fullName>Pardot_Package_Option__c</fullName>
    <description>This field is used by Pardot to send communication emails [PER-3195]</description>
    <label>Pardot Package Option</label>
    <length>255</length>
    <type>Text</type>
</CustomField>