OnboardingV2Minimal/force-app/main/default/objects/Contact/fields/POE_365Pass__c.field-meta.xml
<CustomField>
    <fullName>POE_365Pass__c</fullName>
    <label>Temporary M365 Password</label>
    <length>25</length>
    <type>Text</type>
</CustomField>