OnboardingV2Minimal/force-app/main/default/objects/Contact/fields/POE_Alias__c.field-meta.xml
<CustomField>
    <fullName>POE_Alias__c</fullName>
    <inlineHelpText>Enter your Nickname</inlineHelpText>
    <label>Alias</label>
    <length>8</length>
    <type>Text</type>
</CustomField>