OnboardingV2Minimal/force-app/main/default/objects/Contact/fields/POE_Allow_DTV_Sell__c.field-meta.xml
<CustomField>
    <fullName>POE_Allow_DTV_Sell__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allow DTV Sell</label>
    <type>Checkbox</type>
</CustomField>