OnboardingV2Minimal/force-app/main/default/objects/Contact/fields/POE_Alternate_Email__c.field-meta.xml
<CustomField>
    <fullName>POE_Alternate_Email__c</fullName>
    <label>Alternate Email</label>
    <type>Email</type>
</CustomField>