OnboardingV2Minimal/force-app/main/default/objects/Contact/fields/POE_AOE_Id__c.field-meta.xml
<CustomField>
    <fullName>POE_AOE_Id__c</fullName>
    <label>AOE Id</label>
    <length>25</length>
    <type>Text</type>
</CustomField>