OnboardingV2Minimal/force-app/main/default/objects/Contact/fields/POE_AOE_Pass__c.field-meta.xml
<CustomField>
    <fullName>POE_AOE_Pass__c</fullName>
    <label>AOE Temporary Password</label>
    <length>25</length>
    <type>Text</type>
</CustomField>