OnboardingV2Minimal/force-app/main/default/objects/Contact/fields/POE_Belongs_To_Partner__c.field-meta.xml
<CustomField>
    <fullName>POE_Belongs_To_Partner__c</fullName>
    <formula>IF(Account.RecordType.Name == &quot;Dealer&quot;, true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Belongs To Partner</label>
    <type>Checkbox</type>
</CustomField>