OnboardingV2Minimal/force-app/main/default/objects/Contact/fields/POE_Blacklist__c.field-meta.xml
<CustomField>
    <fullName>POE_Blacklist__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Blacklist</label>
    <type>Checkbox</type>
</CustomField>