OnboardingV2Minimal/force-app/main/default/objects/Contact/fields/POE_Call_Center_Type__c.field-meta.xml
<CustomField>
    <fullName>POE_Call_Center_Type__c</fullName>
    <label>Call Center Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Offshore</fullName>
            </value>
            <value>
                <fullName>On-site</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>