OnboardingV2Minimal/force-app/main/default/objects/Contact/fields/POE_Charter_Confirmation__c.field-meta.xml
<CustomField>
    <fullName>POE_Charter_Confirmation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Charter Confirmation</label>
    <type>Checkbox</type>
</CustomField>